group("g-map") {
    deps=[
        ":test"
    ]
    
}
executable("test") {
  sources = [
    "//test/test.cpp",
  ]
  deps=[
      ":rastermap"
  ]
}
static_library("rastermap") {
    sources=[
        "//include/layer.h",
        "//include/rule.h",
        "//include/map_style.h",
        "//include/map.h",
        "//include/utils/debug_utility.h",

        "//src/layer.cpp",
        "//src/rule.cpp",
        "//src/map_style.cpp",
        "//src/map.cpp",
    ]
    include_dirs=[
        "/usr/local/include",
        "//include/",
        "//3rd/skia",
        "//3rd/"
        
    ]
    libs=[
        "boost_system-mt",
        "boost_thread-mt",
        "boost_filesystem-mt",
        "boost_date_time-mt",
        "boost_timer-mt",
        "boost_chrono-mt",
        "boost_log-mt",
        "boost_log_setup-mt",
        "boost_regex-mt",]
    lib_dirs=["/usr/local/lib"]
}